fixed spacing for all html pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,8 @@ h2 {
     background-color: lightblue;
     width: 90%;
     border-radius: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 hr {
